--- a/index.html
+++ b/index.html
@@ -6,9 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-   <div class="container-fluid bg-danger">test</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <img class="grid img-fluid" src="imgs/grid.png" alt="grid">
+            </div>
+        </div>
+    </div>
+    <header class="container-fluid bg-danger">
+        <div class="container bg-info">
+            <div class="row">
+                <div class="col-5">logo</div>
+                <div class="col-7">
+                    <nav class="nav justify-content-end">
+                        <a href="#" class="nav-link active">HOME</a>
+                        <a href="#" class="nav-link">ABOUT</a>
+                        <a href="#" class="nav-link">WORK</a>
+                        <a href="#" class="nav-link">PROCESS</a>
+                        <a href="#" class="nav-link">SERVICES</a>
+                        <a href="#" class="nav-link">TESTIMONIALS</a>
+                        <a href="#" class="nav-link">CONTACT</a>
+                    </nav>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 offset-6">header</div>
+                
+            </div>
+        </div>
+    </header>
 </body>
 </html>
