--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
@@ -21,8 +22,8 @@
         <div class="container bg-info">
             <div class="row">
                 <div class="col-5">logo</div>
-                <div class="col-7">
-                    <nav class="nav justify-content-end">
+                <div class="col-7 custom">
+                    <nav class="nav justify-content-end custom_nav">
                         <a href="#" class="nav-link active">HOME</a>
                         <a href="#" class="nav-link">ABOUT</a>
                         <a href="#" class="nav-link">WORK</a>
@@ -34,7 +35,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-6 offset-6">header</div>
+                <div class="col-6 offset-6">
+                    <h1>We Design and Develop</h1>
+                    <p>We are a new design studio based in USA. We have over 20 years of combined experience, and know a thing or two about designing websites and mobile apps.</p>
+                    <button>CONTACT US</button>
+                </div>
                 
             </div>
         </div>
