finished styling about block

--- a/index.html
+++ b/index.html
@@ -51,5 +51,18 @@
             </div>
         </div>
     </header>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 d-flex flex-column align-items-center custom_about">
+                    <h2 class="custom_about_head">About Us</h2>
+                    <p class="custom_about_text">Divide have don't man wherein air fourth. Own itself make have night won't make.</p>
+                    <p class="custom_about_text">A you under Seed appear which good give. Own give air without fowl moveth dry first</p>
+                    <p class="custom_about_text">heaven fruit, dominion she'd won't very all.</p>
+                    <img src="imgs/signature.png" alt="signature" class="img-fluid custom_about_signa">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
