--- a/index.html
+++ b/index.html
@@ -64,5 +64,27 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid">
+        <!-- <div class="container"> -->
+            <div class="row custom_skills">
+                <div class="col-6 custom_skills_lside">
+                    <h2 class="custom_skills_head">Professional Skills</h2>
+                    <h6 class="custom_skills_label">UI/UX DESIGN &emsp;75%</h6>
+                    <div class="progress custom_skills_progress">
+                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h6 class="custom_skills_label">WEB DEVELOPMENT &emsp;90%</h6>
+                    <div class="progress custom_skills_progress">
+                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h6 class="custom_skills_label">MARKETING &emsp;65%</h6>
+                    <div class="progress custom_skills_progress">
+                        <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="col-6 custom_skills_rside"></div>
+            </div>
+        <!-- </div> -->
+    </div>
 </body>
 </html>
