--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
     <title>Document</title>
 </head>
 <body>
@@ -65,7 +66,6 @@
         </div>
     </div>
     <div class="container-fluid">
-        <!-- <div class="container"> -->
             <div class="row custom_skills">
                 <div class="col-6 custom_skills_lside">
                     <h2 class="custom_skills_head">Professional Skills</h2>
@@ -84,7 +84,24 @@
                 </div>
                 <div class="col-6 custom_skills_rside"></div>
             </div>
-        <!-- </div> -->
+    </div>
+    <div class="container-fluid custom_stats">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <span class="pe-7s-portfolio"></span>
+                </div>
+                <div class="col-3">
+                    <span class="pe-7s-clock"></span>
+                </div>
+                <div class="col-3">
+                    <span class="pe-7s-star"></span>
+                </div>
+                <div class="col-3">
+                    <span class="pe-7s-like"></span>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
