finished styling stats block

--- a/index.html
+++ b/index.html
@@ -89,16 +89,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                    <span class="pe-7s-portfolio"></span>
+                    <div class="d-flex custom_stats_block">
+                        <span class="pe-7s-portfolio"></span>
+                        <div>
+                            <h6>548</h6>
+                            <p>PROJECTS COMPLETED</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-3">
-                    <span class="pe-7s-clock"></span>
+                    <div class="d-flex custom_stats_block">
+                        <span class="pe-7s-clock"></span>
+                        <div>
+                            <h6>1465</h6>
+                            <p>WORKING HOURS</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-3">
-                    <span class="pe-7s-star"></span>
+                    <div class="d-flex custom_stats_block">
+                        <span class="pe-7s-star"></span>
+                        <div>
+                            <h6>612</h6>
+                            <p>POSITIVE FEADBACKS</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-3">
-                    <span class="pe-7s-like"></span>
+                    <div class="d-flex custom_stats_block">
+                        <span class="pe-7s-like"></span>
+                        <div>
+                            <h6>735</h6>
+                            <p>HAPPY CLIENTS</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
