finished styling photos block

--- a/index.html
+++ b/index.html
@@ -127,5 +127,26 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid custom_photos">
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-3"></div>
+            <div class="col-3"></div>
+            <div class="col-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-3 d-flex justify-content-center align-items-center">
+                <span class="pe-7s-look"></span>
+            </div>
+            <div class="col-3"></div>
+            <div class="col-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center">
+                <a href="#" onclick="return false;">LOAD MORE WORK</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
