finished styling process block

--- a/index.html
+++ b/index.html
@@ -148,5 +148,21 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid custom_process">
+        <div class="row">
+            <div class="col-12 d-flex flex-column align-items-center custom_process_content">
+                <h6>Our Work Process</h6>
+                <div class="d-flex flex-column align-items-center">
+                    <p>Was years it seasons was there form he in in them together over that,</p>
+                    <p>third sixth gathered female creeping bearing behold years.</p>
+                </div>
+                <div class="custom_process_player d-flex justify-content-center align-items-center">
+                    <div class="custom_process_player_play d-flex justify-content-center align-items-center">
+                        <div class="custom_process_player_triangle"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
