finished styling services block

--- a/index.html
+++ b/index.html
@@ -164,5 +164,93 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid custom_services">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <div class="custom_services_card">
+                        <span class="pe-7s-diamond"></span>
+                        <h6>ui / ux design</h6>
+                        <div class="custom_services_card_text">
+                            <p>Be set fourth land god darkness</p>
+                            <p>make it wherein own</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="custom_services_card">
+                        <span class="pe-7s-arc"></span>
+                        <h6>web development</h6>
+                        <div class="custom_services_card_text">
+                            <p>A she'd them bring void moving</p>
+                            <p>third she'd kind fill</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="custom_services_card">
+                        <span class="pe-7s-phone"></span>
+                        <h6>app / mobile</h6>
+                        <div class="custom_services_card_text">
+                            <p>Dominion man second spirit he,</p>
+                            <p>earth they're creeping</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="custom_services_card">
+                        <span class="pe-7s-joy"></span>
+                        <h6>game design</h6>
+                        <div class="custom_services_card_text">
+                            <p>Morning his saying moveth it</p>
+                            <p>multiply appear life be</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <div class="custom_services_card">
+                        <span class="pe-7s-plane"></span>
+                        <h6>seo / marketing</h6>
+                        <div class="custom_services_card_text">
+                            <p>Give won't after land fill creeping</p>
+                            <p>meat you, may</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="custom_services_card">
+                        <span class="pe-7s-star"></span>
+                        <h6>photography</h6>
+                        <div class="custom_services_card_text">
+                            <p>Creepeth one seas cattle grass</p>
+                            <p>give moving saw give</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="custom_services_card">
+                        <span class="pe-7s-magic-wand"></span>
+                        <h6>graphic desing</h6>
+                        <div class="custom_services_card_text">
+                            <p>Open, great whales air rule for,</p>
+                            <p>fourth life whales</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="custom_services_card">
+                        <span class="pe-7s-paint-bucket"></span>
+                        <h6>illustrations</h6>
+                        <div class="custom_services_card_text">
+                            <p>Whales likeness hath, man kind</p>
+                            <p>for them air two won't</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
