finished stilyng quotes block

--- a/index.html
+++ b/index.html
@@ -252,5 +252,23 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid custom_quotes">
+        <div class="row">
+            <div class="col d-flex flex-column justify-content-center align-items-center">
+                <h3>“ Outstanding job and exceeded all expectations. It was a pleasure</h3>
+                <h3>to work with them on a sizable first project and am looking</h3>
+                <h3>forward to start the next one asap.”</h3>
+                <h4>Michael Hopkins</h4>
+                <nav aria-label="#">
+                    <ul class="custom_quotes_pagination d-flex align-items-center">
+                      <li><a class="custom_quotes_pagination_item" href="#"></a></li>
+                      <li><a class="custom_quotes_pagination_item custom_quotes_pagination_item_active" href="#"></a></li>
+                      <li><a class="custom_quotes_pagination_item" href="#"></a></li>
+                    </ul>
+                  </nav>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
