finished styling logos block

--- a/index.html
+++ b/index.html
@@ -269,6 +269,18 @@
             </div>
         </div>
     </div>
-
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col d-flex custom_logos justify-content-between">
+                    <img class="img-fluid" src="imgs/1.png" alt="logo1">
+                    <img class="img-fluid" src="imgs/2.png" alt="logo2">
+                    <img class="img-fluid" src="imgs/3.png" alt="logo3">
+                    <img class="img-fluid" src="imgs/4.png" alt="logo4">
+                    <img class="img-fluid" src="imgs/5.png" alt="logo5">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
