finished styling form block

--- a/index.html
+++ b/index.html
@@ -282,5 +282,25 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col d-flex justify-content-center custom_form">
+                <div class="flex-column d-flex justify-content-center align-items-center custom_form_content">
+                    <h2>Need a Project?</h2>
+                    <p>Let us know what you're looking for in an agency. We'll take a look and see</p>
+                    <p>if this could be the start of something beautiful.</p>
+                    <form class="flex-column d-flex justify-content-center align-items-center">
+                        <div>
+                            <input type="text" placeholder="Your Name"><input type="email" placeholder="Your Email">
+                        </div>
+                        <input type="text" placeholder="Your Title">
+                        <!-- <input type="text" placeholder="Your Comment"> -->
+                        <textarea name="text" placeholder="Your Comment"></textarea>
+                        <button class="custom_btn">SEND MESSAGE</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
