finished styling footer and main page

--- a/index.html
+++ b/index.html
@@ -302,5 +302,41 @@
             </div>
         </div>
     </div>
+    <footer class="container-fluid custom_footer">
+        <div class="container">
+            <div class="row">
+                <div class="col d-flex justify-content-between custom_footer_lists">
+                    <ul>
+                        <li><h6>Piroll Design, Inc.</h6></li>
+                        <li><br></li>
+                        <li>© 2017 Piroll. All rights reserved.</li>
+                        <li>Designed by robirurk.</li>
+                    </ul>
+                    <ul>
+                        <li>hello@pirolltheme.com</li>
+                        <li>+44 987 065 908</li>
+                    </ul>
+                    <ul>
+                        <li><a href="#" onclick="return false;">Projects</a></li>
+                        <li><a href="#" onclick="return false;">About</a></li>
+                        <li><a href="#" onclick="return false;">Services</a></li>
+                        <li><a href="#" onclick="return false;">Carreer</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#" onclick="return false;">News</a></li>
+                        <li><a href="#" onclick="return false;">Events</a></li>
+                        <li><a href="#" onclick="return false;">Contact</a></li>
+                        <li><a href="#" onclick="return false;">Legals</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#" onclick="return false;">Facebook</a></li>
+                        <li><a href="#" onclick="return false;">Twitter</a></li>
+                        <li><a href="#" onclick="return false;">Instagram</a></li>
+                        <li><a href="#" onclick="return false;">Dribbble</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
