finished home page + restyling some styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
-    <title>Document</title>
+    <title>Main page</title>
 </head>
 <body>
     <div class="container">
@@ -23,11 +23,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-5">
-                    <img src="imgs/logo.png" alt="logo" class="img-fluid custom_logo">
+                    <img src="imgs/logo.png" alt="logo" class="img-fluid main_logo">
                 </div>
-                <div class="col-7 custom">
-                    <nav class="nav d-flex custom_nav">
-                        <a href="#" class="nav-link active">HOME</a>
+                <div class="col-7 main">
+                    <nav class="nav d-flex main_nav">
+                        <a href="/home.html" class="nav-link active">HOME</a>
                         <a href="#" class="nav-link">ABOUT</a>
                         <a href="#" class="nav-link">WORK</a>
                         <a href="#" class="nav-link">PROCESS</a>
@@ -39,14 +39,14 @@
             </div>
             <div class="row">
                 <div class="col-6 offset-6">
-                    <div class="custom_header_content">
+                    <div class="main_header_content">
                         <h1>We Design and Develop</h1>
-                        <div class="custom_header_text">
+                        <div class="main_header_text">
                             <p>We are a new design studio based in USA. We have over</p>
                             <p>20 years of combined experience, and know a thing or two </p>
                             <p>about designing websites and mobile apps.</p>
                         </div>
-                        <button class="custom_btn">CONTACT US</button>
+                        <button class="main_btn">CONTACT US</button>
                     </div>
                 </div>
             </div>
@@ -55,41 +55,41 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-12 d-flex flex-column align-items-center custom_about">
-                    <h2 class="custom_about_head">About Us</h2>
-                    <p class="custom_about_text">Divide have don't man wherein air fourth. Own itself make have night won't make.</p>
-                    <p class="custom_about_text">A you under Seed appear which good give. Own give air without fowl moveth dry first</p>
-                    <p class="custom_about_text">heaven fruit, dominion she'd won't very all.</p>
-                    <img src="imgs/signature.png" alt="signature" class="img-fluid custom_about_signa">
+                <div class="col-12 d-flex flex-column align-items-center main_about">
+                    <h2 class="main_about_head">About Us</h2>
+                    <p class="main_about_text">Divide have don't man wherein air fourth. Own itself make have night won't make.</p>
+                    <p class="main_about_text">A you under Seed appear which good give. Own give air without fowl moveth dry first</p>
+                    <p class="main_about_text">heaven fruit, dominion she'd won't very all.</p>
+                    <img src="imgs/signature.png" alt="signature" class="img-fluid main_about_signa">
                 </div>
             </div>
         </div>
     </div>
     <div class="container-fluid">
-            <div class="row custom_skills">
-                <div class="col-6 custom_skills_lside">
-                    <h2 class="custom_skills_head">Professional Skills</h2>
-                    <h6 class="custom_skills_label">UI/UX DESIGN &emsp;75%</h6>
-                    <div class="progress custom_skills_progress">
+            <div class="row main_skills">
+                <div class="col-6 main_skills_lside">
+                    <h2 class="main_skills_head">Professional Skills</h2>
+                    <h6 class="main_skills_label">UI/UX DESIGN &emsp;75%</h6>
+                    <div class="progress main_skills_progress">
                         <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <h6 class="custom_skills_label">WEB DEVELOPMENT &emsp;90%</h6>
-                    <div class="progress custom_skills_progress">
+                    <h6 class="main_skills_label">WEB DEVELOPMENT &emsp;90%</h6>
+                    <div class="progress main_skills_progress">
                         <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <h6 class="custom_skills_label">MARKETING &emsp;65%</h6>
-                    <div class="progress custom_skills_progress">
+                    <h6 class="main_skills_label">MARKETING &emsp;65%</h6>
+                    <div class="progress main_skills_progress">
                         <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
-                <div class="col-6 custom_skills_rside"></div>
+                <div class="col-6 main_skills_rside"></div>
             </div>
     </div>
-    <div class="container-fluid custom_stats">
+    <div class="container-fluid main_stats">
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                    <div class="d-flex custom_stats_block">
+                    <div class="d-flex main_stats_block">
                         <span class="pe-7s-portfolio"></span>
                         <div>
                             <h6>548</h6>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="d-flex custom_stats_block">
+                    <div class="d-flex main_stats_block">
                         <span class="pe-7s-clock"></span>
                         <div>
                             <h6>1465</h6>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="d-flex custom_stats_block">
+                    <div class="d-flex main_stats_block">
                         <span class="pe-7s-star"></span>
                         <div>
                             <h6>612</h6>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="d-flex custom_stats_block">
+                    <div class="d-flex main_stats_block">
                         <span class="pe-7s-like"></span>
                         <div>
                             <h6>735</h6>
@@ -127,7 +127,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid custom_photos">
+    <div class="container-fluid main_photos">
         <div class="row">
             <div class="col-3"></div>
             <div class="col-3"></div>
@@ -148,60 +148,60 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid custom_process">
+    <div class="container-fluid main_process">
         <div class="row">
-            <div class="col-12 d-flex flex-column align-items-center custom_process_content">
+            <div class="col-12 d-flex flex-column align-items-center main_process_content">
                 <h6>Our Work Process</h6>
                 <div class="d-flex flex-column align-items-center">
                     <p>Was years it seasons was there form he in in them together over that,</p>
                     <p>third sixth gathered female creeping bearing behold years.</p>
                 </div>
-                <div class="custom_process_player d-flex justify-content-center align-items-center">
-                    <div class="custom_process_player_play d-flex justify-content-center align-items-center">
-                        <div class="custom_process_player_triangle"></div>
+                <div class="main_process_player d-flex justify-content-center align-items-center">
+                    <div class="main_process_player_play d-flex justify-content-center align-items-center">
+                        <div class="main_process_player_triangle"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid custom_services">
+    <div class="container-fluid main_services">
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                    <div class="custom_services_card">
+                    <div class="main_services_card">
                         <span class="pe-7s-diamond"></span>
                         <h6>ui / ux design</h6>
-                        <div class="custom_services_card_text">
+                        <div class="main_services_card_text">
                             <p>Be set fourth land god darkness</p>
                             <p>make it wherein own</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="custom_services_card">
+                    <div class="main_services_card">
                         <span class="pe-7s-arc"></span>
                         <h6>web development</h6>
-                        <div class="custom_services_card_text">
+                        <div class="main_services_card_text">
                             <p>A she'd them bring void moving</p>
                             <p>third she'd kind fill</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="custom_services_card">
+                    <div class="main_services_card">
                         <span class="pe-7s-phone"></span>
                         <h6>app / mobile</h6>
-                        <div class="custom_services_card_text">
+                        <div class="main_services_card_text">
                             <p>Dominion man second spirit he,</p>
                             <p>earth they're creeping</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="custom_services_card">
+                    <div class="main_services_card">
                         <span class="pe-7s-joy"></span>
                         <h6>game design</h6>
-                        <div class="custom_services_card_text">
+                        <div class="main_services_card_text">
                             <p>Morning his saying moveth it</p>
                             <p>multiply appear life be</p>
                         </div>
@@ -210,40 +210,40 @@
             </div>
             <div class="row">
                 <div class="col-3">
-                    <div class="custom_services_card">
+                    <div class="main_services_card">
                         <span class="pe-7s-plane"></span>
                         <h6>seo / marketing</h6>
-                        <div class="custom_services_card_text">
+                        <div class="main_services_card_text">
                             <p>Give won't after land fill creeping</p>
                             <p>meat you, may</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="custom_services_card">
+                    <div class="main_services_card">
                         <span class="pe-7s-star"></span>
                         <h6>photography</h6>
-                        <div class="custom_services_card_text">
+                        <div class="main_services_card_text">
                             <p>Creepeth one seas cattle grass</p>
                             <p>give moving saw give</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="custom_services_card">
+                    <div class="main_services_card">
                         <span class="pe-7s-magic-wand"></span>
                         <h6>graphic desing</h6>
-                        <div class="custom_services_card_text">
+                        <div class="main_services_card_text">
                             <p>Open, great whales air rule for,</p>
                             <p>fourth life whales</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="custom_services_card">
+                    <div class="main_services_card">
                         <span class="pe-7s-paint-bucket"></span>
                         <h6>illustrations</h6>
-                        <div class="custom_services_card_text">
+                        <div class="main_services_card_text">
                             <p>Whales likeness hath, man kind</p>
                             <p>for them air two won't</p>
                         </div>
@@ -252,7 +252,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid custom_quotes">
+    <div class="container-fluid main_quotes">
         <div class="row">
             <div class="col d-flex flex-column justify-content-center align-items-center">
                 <h3>“ Outstanding job and exceeded all expectations. It was a pleasure</h3>
@@ -260,10 +260,10 @@
                 <h3>forward to start the next one asap.”</h3>
                 <h4>Michael Hopkins</h4>
                 <nav aria-label="#">
-                    <ul class="custom_quotes_pagination d-flex align-items-center">
-                      <li><a class="custom_quotes_pagination_item" href="#"></a></li>
-                      <li><a class="custom_quotes_pagination_item custom_quotes_pagination_item_active" href="#"></a></li>
-                      <li><a class="custom_quotes_pagination_item" href="#"></a></li>
+                    <ul class="main_quotes_pagination d-flex align-items-center">
+                      <li><a class="main_quotes_pagination_item" href="#"></a></li>
+                      <li><a class="main_quotes_pagination_item main_quotes_pagination_item_active" href="#"></a></li>
+                      <li><a class="main_quotes_pagination_item" href="#"></a></li>
                     </ul>
                   </nav>
             </div>
@@ -272,7 +272,7 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col d-flex custom_logos justify-content-between">
+                <div class="col d-flex main_logos justify-content-between">
                     <img class="img-fluid" src="imgs/1.png" alt="logo1">
                     <img class="img-fluid" src="imgs/2.png" alt="logo2">
                     <img class="img-fluid" src="imgs/3.png" alt="logo3">
@@ -284,8 +284,8 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col d-flex justify-content-center custom_form">
-                <div class="flex-column d-flex justify-content-center align-items-center custom_form_content">
+            <div class="col d-flex justify-content-center main_form">
+                <div class="flex-column d-flex justify-content-center align-items-center main_form_content">
                     <h2>Need a Project?</h2>
                     <p>Let us know what you're looking for in an agency. We'll take a look and see</p>
                     <p>if this could be the start of something beautiful.</p>
@@ -296,16 +296,16 @@
                         <input type="text" placeholder="Your Title">
                         <!-- <input type="text" placeholder="Your Comment"> -->
                         <textarea name="text" placeholder="Your Comment"></textarea>
-                        <button class="custom_btn">SEND MESSAGE</button>
+                        <button class="main_btn">SEND MESSAGE</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-    <footer class="container-fluid custom_footer">
+    <footer class="container-fluid main_footer">
         <div class="container">
             <div class="row">
-                <div class="col d-flex justify-content-between custom_footer_lists">
+                <div class="col d-flex justify-content-between main_footer_lists">
                     <ul>
                         <li><h6>Piroll Design, Inc.</h6></li>
                         <li><br></li>
