finished about page

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
                 <div class="col-3 offset-9 home">
                     <nav class="nav d-flex home_nav">
                         <a href="/home.html" class="nav-link active">HOME</a>
-                        <a href="#" class="nav-link">ABOUT</a>
+                        <a href="/about.html" class="nav-link">ABOUT</a>
                         <a href="#" class="nav-link">CONTACT</a>
                     </nav>
                 </div>
