--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="col-7 main">
                     <nav class="nav d-flex main_nav">
                         <a href="/home.html" class="nav-link active">HOME</a>
-                        <a href="#" class="nav-link">ABOUT</a>
+                        <a href="/about.html" class="nav-link">ABOUT</a>
                         <a href="#" class="nav-link">WORK</a>
                         <a href="#" class="nav-link">PROCESS</a>
                         <a href="#" class="nav-link">SERVICES</a>
